--- a/ProjetoAgricolaDario/index.html
+++ b/ProjetoAgricolaDario/index.html
@@ -4,8 +4,20 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Home</title>
+        <link rel="stylesheet" href="estiloHome.css">
     </head>
     <body>
-        
+        <div class="background">
+            <div class="nav">
+                <img class="fotoLogo" src="fotoLogo.png" alt="logotipo">
+                <h1 class="nome">Dario</h1>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="servicos.html">Serviços</a></li>
+                    <li><a href="trabalheConosco.html">Trabalhe<br>Conosco</a></li>
+                    <li><a href="intitucional.html">Intitucional</a></li>
+                </ul>
+            </div>
+        </div>
     </body>
 </html>
