Implementação de páginas
Foram criados os designs das páginas institucional e serviços.

--- a/ProjetoAgricolaDario/trabalheConosco.html
+++ b/ProjetoAgricolaDario/trabalheConosco.html
@@ -14,7 +14,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="servicos.html">Serviços</a></li>
                 <li><a href="trabalheConosco.html">Trabalhe<br>Conosco</a></li>
-                <li><a href="intitucional.html">Intitucional</a></li>
+                <li><a href="intitucional.html">Institucional</a></li>
             </ul>
         </nav>
 
