--- a/ProjetoAgricolaDario/servicos.html
+++ b/ProjetoAgricolaDario/servicos.html
@@ -3,9 +3,22 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="servicos.css">
         <title>Serviços</title>
     </head>
     <body>
-        <h1>Pagina de serviços</h1>
+        <div class="background">
+            <div class="nav">
+                <img class="fotoLogo" src="fotoLogo.png" alt="logotipo">
+                <h1 class="nome">Dario</h1>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="servicos.html">Serviços</a></li>
+                    <li><a href="trabalheConosco.html">Trabalhe<br>Conosco</a></li>
+                    <li><a href="intitucional.html">Institucional</a></li>
+                </ul>
+            </div>
+
+        </div>
     </body>
 </html>
