Ajuste pagina home
Foram feitos ajustes e implementações na pagina home.

--- a/ProjetoAgricolaDario/index.html
+++ b/ProjetoAgricolaDario/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="estiloHome.css">
     </head>
     <body>
-        <div class="background">
+        <div class="container">
             <div class="nav">
                 <img class="fotoLogo" src="fotoLogo.png" alt="logotipo">
                 <h1 class="nome">Dario</h1>
@@ -17,6 +17,12 @@
                     <li><a href="trabalheConosco.html">Trabalhe<br>Conosco</a></li>
                     <li><a href="intitucional.html">Institucional</a></li>
                 </ul>
+            </div>
+            <div class="container2">
+                <div class="container3">
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae consequatur, exercitationem et esse magni beatae fugit autem. Facilis quae maiores consequatur tempora alias quam blanditiis voluptatibus, nihil cupiditate aut ducimus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam repudiandae fuga suscipit velit illum fugit. Obcaecati aut nostrum corrupti quae voluptatum sed molestiae eaque minus ipsam, aperiam, quisquam velit? Error. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, molestiae dolorum modi sit similique odio nemo distinctio consequuntur quos vitae aspernatur nam magni. Soluta assumenda quia sunt dicta modi laudantium! Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis, saepe veritatis eaque atque molestias facilis cum vel placeat? Dolores totam ipsa laboriosam blanditiis ab sed repellendus saepe delectus reprehenderit! Et. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates recusandae ipsa natus, magnam a quibusdam voluptatibus, quis cupiditate dicta in aspernatur sequi ab, odit totam vitae. Quibusdam repellat debitis eum.</p>
+                    <img class="fotoCarrossel" src="canaAcucar.jpg">
+                </div>
             </div>
         </div>
     </body>
