Ajustes nas páginas
Foi ajustado o html e css de todas as páginas para ficar em um padrão.

--- a/ProjetoAgricolaDario/servicos.html
+++ b/ProjetoAgricolaDario/servicos.html
@@ -7,7 +7,7 @@
         <title>Serviços</title>
     </head>
     <body>
-        <div class="background">
+        <div class="container">
             <div class="nav">
                 <img class="fotoLogo" src="fotoLogo.png" alt="logotipo">
                 <h1 class="nome">Dario</h1>
@@ -18,7 +18,12 @@
                     <li><a href="intitucional.html">Institucional</a></li>
                 </ul>
             </div>
-
+            <div class="container2">
+                <div class="container3">
+                    <img class="fotoCarrossel" src="canaAcucar.jpg">
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae consequatur, exercitationem et esse magni beatae fugit autem. Facilis quae maiores consequatur tempora alias quam blanditiis voluptatibus, nihil cupiditate aut ducimus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam repudiandae fuga suscipit velit illum fugit. Obcaecati aut nostrum corrupti quae voluptatum sed molestiae eaque minus ipsam, aperiam, quisquam velit? Error. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, molestiae dolorum modi sit similique odio nemo distinctio consequuntur quos vitae aspernatur nam magni.</p>
+                </div>
+            </div>
         </div>
     </body>
 </html>
