--- a/ProjetoAgricolaDario/servicos.html
+++ b/ProjetoAgricolaDario/servicos.html
@@ -2,7 +2,8 @@
     <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <link rel="stylesheet" href="servicos.css">
         <title>Serviços</title>
     </head>
@@ -19,10 +20,16 @@
                 </ul>
             </div>
             <div class="container2">
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae consequatur, exercitationem et esse magni beatae fugit autem. Facilis quae maiores consequatur tempora alias quam blanditiis voluptatibus, nihil cupiditate aut ducimus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam repudiandae fuga suscipit velit illum fugit. Obcaecati aut nostrum corrupti quae voluptatum sed molestiae eaque minus ipsam, aperiam, quisquam velit? Error. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, molestiae dolorum modi sit similique odio nemo distinctio consequuntur quos vitae aspernatur nam magni.</p>
                 <div class="container3">
+
                     <img class="fotoCarrossel" src="canaAcucar.jpg">
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae consequatur, exercitationem et esse magni beatae fugit autem. Facilis quae maiores consequatur tempora alias quam blanditiis voluptatibus, nihil cupiditate aut ducimus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam repudiandae fuga suscipit velit illum fugit. Obcaecati aut nostrum corrupti quae voluptatum sed molestiae eaque minus ipsam, aperiam, quisquam velit? Error. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, molestiae dolorum modi sit similique odio nemo distinctio consequuntur quos vitae aspernatur nam magni.</p>
+                    <img class="fotoCarrossel" src="canaAcucar.jpg">
+                    <img class="fotoCarrossel" src="canaAcucar.jpg">
+
                 </div>
+
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae consequatur, exercitationem et esse magni beatae fugit autem. Facilis quae maiores consequatur tempora alias quam blanditiis voluptatibus, nihil cupiditate aut ducimus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam repudiandae fuga suscipit velit illum fugit. Obcaecati aut nostrum corrupti quae voluptatum sed molestiae eaque minus ipsam, aperiam, quisquam velit? Error. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, molestiae dolorum modi sit similique odio nemo distinctio consequuntur quos vitae aspernatur nam magni.</p>
             </div>
         </div>
     </body>
