--- a/ProjetoAgricolaDario/index.html
+++ b/ProjetoAgricolaDario/index.html
@@ -15,7 +15,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="servicos.html">Serviços</a></li>
-                    <li><a href="trabalheConosco.html">Trabalhe<br>Conosco</a></li>
+                    <li><a href="trabalheConosco.php">Trabalhe<br>Conosco</a></li>
                     <li><a href="intitucional.html">Institucional</a></li>
                 </ul>
             </div>
