--- a/ProjetoAgricolaDario/servicos.html
+++ b/ProjetoAgricolaDario/servicos.html
@@ -20,16 +20,21 @@
                 </ul>
             </div>
             <div class="container2">
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae consequatur, exercitationem et esse magni beatae fugit autem. Facilis quae maiores consequatur tempora alias quam blanditiis voluptatibus, nihil cupiditate aut ducimus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam repudiandae fuga suscipit velit illum fugit. Obcaecati aut nostrum corrupti quae voluptatum sed molestiae eaque minus ipsam, aperiam, quisquam velit? Error. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, molestiae dolorum modi sit similique odio nemo distinctio consequuntur quos vitae aspernatur nam magni.</p>
+                <p>Em nossos serviços estão inclusos aleiramento de palha, passagem do cultivador quebra-lombo, além da reposição de nutrientes necessários para o cultivo da cana.
+                    Aleiramento de palha possui dois benefícios. O primeiro é para melhorar a brotação da cana e o segundo é para diminuir o desenvolvimento de algumas pragas como insetos.
+                    O corte de soqueira é realizado para evitar a incidência de pragas de solo. Aumentando a eficiência dos nematicidas no controle da praga. Além da aplicação dos nematicidas micronutrientes também podem são aplicados no corte da soqueira.
+                    A passagem do cultivador quebra-lombo é feita para o nivelamento de solo, melhorando a condição de colheita e fazendo com que a raiz da cana fique mais profunda e bem firme no solo evitando tombamento. 
+                    </p>
                 <div class="container3">
 
-                    <img class="fotoCarrossel" src="canaAcucar.jpg">
-                    <img class="fotoCarrossel" src="canaAcucar.jpg">
-                    <img class="fotoCarrossel" src="canaAcucar.jpg">
+                    <img class="fotoCarrossel" src="img5.jpg">
+                    <img class="fotoCarrossel" src="img4.jpg">
+                    <img class="fotoCarrossel" src="img6.jpg">
 
                 </div>
 
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae consequatur, exercitationem et esse magni beatae fugit autem. Facilis quae maiores consequatur tempora alias quam blanditiis voluptatibus, nihil cupiditate aut ducimus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam repudiandae fuga suscipit velit illum fugit. Obcaecati aut nostrum corrupti quae voluptatum sed molestiae eaque minus ipsam, aperiam, quisquam velit? Error. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, molestiae dolorum modi sit similique odio nemo distinctio consequuntur quos vitae aspernatur nam magni.</p>
+                    <p>A calagem é feita com a aplicação de uma camada de calcário na superfície da terra entre 0 e 20 cm essa etapa é muito importante, pois o calcário faz a correção e se necessário a reposição de cálcio, além de ajudar a corrigir o alumio presente no solo.
+                    A fosfatagem tem um papel crucial no desenvolvimento da lavoura de cana. O fósforo é absorvido da solução do solo pelas raízes das plantas, é aplicado no início de desenvolvimento das plantas para assegurar um adequado crescimento de raízes e para impulsionar perfilhamento.</p>
             </div>
         </div>
     </body>
