--- a/ProjetoAgricolaDario/index.html
+++ b/ProjetoAgricolaDario/index.html
@@ -32,13 +32,13 @@
                       </ol>
                       <div class="carousel-inner">
                         <div class="carousel-item active">
-                          <img class="img-fluid d-block  w-auto" src="imageBg.jpg" alt="Primeiro Slide">
+                          <img class="img-fluid d-block  w-auto" src="img1.jpg" alt="Primeiro Slide">
                         </div>
                         <div class="carousel-item">
-                          <img class="img-fluid d-block  w-auto" src="canaAcucar.jpg" alt="Segundo Slide">
+                          <img class="img-fluid d-block  w-auto" src="img7.jpg" alt="Segundo Slide">
                         </div>
                         <div class="carousel-item">
-                          <img class="img-fluid d-block w-auto" src="imageBg.jpg" alt="Terceiro Slide">
+                          <img class="img-fluid d-block w-auto" src="img3.jpg" alt="Terceiro Slide">
                         </div>
                       </div>
                       <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
