Implementação de texto
Todos os textos foram devidamente implemntados e ajustados

--- a/ProjetoAgricolaDario/index.html
+++ b/ProjetoAgricolaDario/index.html
@@ -21,7 +21,10 @@
                 </ul>
             </div>
             <div class="container2">
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae consequatur, exercitationem et esse magni beatae fugit autem. Facilis quae maiores consequatur tempora alias quam blanditiis voluptatibus, nihil cupiditate aut ducimus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam repudiandae fuga suscipit velit illum fugit. Obcaecati aut nostrum corrupti quae voluptatum sed molestiae eaque minus ipsam, aperiam, quisquam velit? Error. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, molestiae dolorum modi sit similique odio nemo distinctio consequuntur quos vitae aspernatur nam magni.</p>
+              
+                    <h1>Bem-vindo à Serviços Agrícolas Dario</h1>
+                    <p>Desde 2005, a Serviços Agrícolas Dario se destaca no cultivo de cana de açúcar, trazendo soluções agrícolas de alta qualidade. Com uma equipe qualificada, a empresa adota práticas inovadoras e tecnologias avançadas para otimizar a produção. Comprometida com a sustentabilidade, a Dario prioriza a preservação ambiental e responsabilidade social. Seu compromisso com a excelência e ética a consolida como referência no setor agrícola, impulsionando a inovação e contribuindo para o desenvolvimento sustentável.
+                      </p>
 
                 <div class="carrossel">
                     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
