--- a/ProjetoAgricolaDario/servicos.html
+++ b/ProjetoAgricolaDario/servicos.html
@@ -8,7 +8,9 @@
         <title>Serviços</title>
     </head>
     <body>
+        
         <div class="container">
+
             <div class="nav">
                 <img class="fotoLogo" src="fotoLogo.png" alt="logotipo">
                 <h1 class="nome">Dario</h1>
@@ -19,12 +21,13 @@
                     <li><a href="intitucional.html">Institucional</a></li>
                 </ul>
             </div>
+
             <div class="container2">
                 <p>Em nossos serviços estão inclusos aleiramento de palha, passagem do cultivador quebra-lombo, além da reposição de nutrientes necessários para o cultivo da cana.
-                    Aleiramento de palha possui dois benefícios. O primeiro é para melhorar a brotação da cana e o segundo é para diminuir o desenvolvimento de algumas pragas como insetos.
-                    O corte de soqueira é realizado para evitar a incidência de pragas de solo. Aumentando a eficiência dos nematicidas no controle da praga. Além da aplicação dos nematicidas micronutrientes também podem são aplicados no corte da soqueira.
-                    A passagem do cultivador quebra-lombo é feita para o nivelamento de solo, melhorando a condição de colheita e fazendo com que a raiz da cana fique mais profunda e bem firme no solo evitando tombamento. 
-                    </p>
+                Aleiramento de palha possui dois benefícios. O primeiro é para melhorar a brotação da cana e o segundo é para diminuir o desenvolvimento de algumas pragas como insetos.
+                O corte de soqueira é realizado para evitar a incidência de pragas de solo. Aumentando a eficiência dos nematicidas no controle da praga. Além da aplicação dos nematicidas micronutrientes também podem são aplicados no corte da soqueira.
+                A passagem do cultivador quebra-lombo é feita para o nivelamento de solo, melhorando a condição de colheita e fazendo com que a raiz da cana fique mais profunda e bem firme no solo evitando tombamento. 
+                </p>
                 <div class="container3">
 
                     <img class="fotoCarrossel" src="img5.jpg">
@@ -33,8 +36,10 @@
 
                 </div>
 
-                    <p>A calagem é feita com a aplicação de uma camada de calcário na superfície da terra entre 0 e 20 cm essa etapa é muito importante, pois o calcário faz a correção e se necessário a reposição de cálcio, além de ajudar a corrigir o alumio presente no solo.
-                    A fosfatagem tem um papel crucial no desenvolvimento da lavoura de cana. O fósforo é absorvido da solução do solo pelas raízes das plantas, é aplicado no início de desenvolvimento das plantas para assegurar um adequado crescimento de raízes e para impulsionar perfilhamento.</p>
+                <p>A calagem é feita com a aplicação de uma camada de calcário na superfície da terra entre 0 e 20 cm essa etapa é muito importante, pois o calcário faz a correção e se necessário a reposição de cálcio, além de ajudar a corrigir o alumio presente no solo.
+                A fosfatagem tem um papel crucial no desenvolvimento da lavoura de cana. O fósforo é absorvido da solução do solo pelas raízes das plantas, é aplicado no início de desenvolvimento das plantas para assegurar um adequado crescimento de raízes e para impulsionar perfilhamento.
+                </p>
+
             </div>
         </div>
     </body>
